# eigen_torch

./: .gitignore  CMakeLists.txt  README.md
cmake/: EigenConfig.cmake.in
docs/: Doxyfile  conf.py  index.rst  module_coverage.rst  quickstart.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  module_coverage.html  objects.inv  quickstart.html  search.html  searchindex.js  testing.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  module_coverage.doctree  quickstart.doctree  testing.doctree
docs/_build/html/_sources/: index.rst.txt  testing.rst.txt
docs/doxygen_out/xml/: Doxyfile.xml  _aligned_box.xml  _angle_axis.xml  _array.xml  _cholesky.xml  _core.xml  _dense.xml  _device_8h.xml  _eigen.xml  _eigenvalues.xml  _geometry.xml  _hyperplane.xml  _jacobi.xml  _l_u.xml  _map.xml  _matrix_8h.xml  _matrix_decompositions_8h.xml  _parametrized_line.xml  _q_r.xml  _quaternion.xml  _rotation2_d.xml  _s_v_d.xml  _scaling.xml  _sparse.xml  _sparse_cholesky.xml  _sparse_common.xml  _sparse_l_u.xml  _sparse_matrix.xml  _sparse_q_r.xml  _sparse_vector.xml  _transform.xml  _translation.xml  class_eigen_1_1_array.xml  class_eigen_1_1_b_d_c_s_v_d.xml  class_eigen_1_1_col_piv_householder_q_r.xml  class_eigen_1_1_complete_orthogonal_decomposition.xml  class_eigen_1_1_complex_eigen_solver.xml  class_eigen_1_1_device_manager.xml  class_eigen_1_1_eigen_solver.xml  class_eigen_1_1_full_piv_householder_q_r.xml  (+13 more)
include/Eigen/: AlignedBox  AngleAxis  Array  Cholesky  Core  Dense  Device.h  Eigenvalues  Geometry  Hyperplane  Jacobi  LU  Map  Matrix.h  MatrixDecompositions.h  ParametrizedLine  QR  Quaternion  Rotation2D  SVD  Scaling  Sparse  SparseCholesky  SparseCommon  SparseLU  SparseMatrix  SparseQR  SparseVector  Transform  Translation
include/unsupported/Eigen/: AdolcForward  AlignedVector3  ArpackSupport  AutoDiff  BVH  EulerAngles  FFT  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MPRealSupport  MatrixFunctions  NNLS  NonLinearOptimization  NumericalDiff  OpenGLSupport  Polynomials  SparseExtra  SpecialFunctions  Splines
include/unsupported/Eigen/CXX11/: Tensor  TensorSymmetry  ThreadPool
tests/: main.cpp  test_api_compat.cpp  test_sparse_linalg.cpp  test_unsupported_compat.cpp  test_unsupported_full_modules.cpp
